src/components/repositories/index.module.css
.container {
  position: relative;
  width: 100%;
  max-width: var(--content-max-width);

  display: flex;
  flex-direction: column;
  padding: var(--spacing-sm);
  padding-bottom: calc(var(--spacing-sm) + var(--statusline-height));
  border: 1px solid var(--border-color);
}

.loadingContainer {
  flex: 1;
}

.header {
  display: flex;
  align-items: center;
}

.title {
  position: absolute;
  top: 0;
  left: var(--spacing-sm);
  transform: translateY(-50%);
  display: flex;
  flex-wrap: wrap;
  align-items: baseline;
  column-gap: var(--spacing-xs);
  row-gap: var(--spacing-xxs);
  padding: 0 var(--spacing-xs);
  background: var(--background);
  color: var(--foreground-accent);
  font-family: var(--font-mono);
  font-size: var(--font-size-md);
  line-height: var(--line-height-md);
  font-weight: 700;
  word-break: break-word;
}

.count {
  color: var(--foreground-shade);
  font-size: var(--font-size-sm);
  line-height: var(--line-height-sm);
  font-weight: 400;
}

@media (min-width: 768px) {
  .header {
    align-items: center;
  }
}

